updates css style

--- a/fitness-frontend/style.css
+++ b/fitness-frontend/style.css
@@ -38,23 +38,42 @@ input {
   width: 960px;
   margin: auto;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
 }
 
-ul {
-  padding-left: 20px;
+ul#workout {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 
-.delete-workout-link {
-  color: red;
+.workout-nav {
+  border: 3px solid rgb(5, 41, 158);
 }
 
-.editable {
-  border: 1px solid black;
+.workout-name {
+  font-size: 20px;
   padding: 20px;
 }
 
-#workouts-content {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-gap: 10px;
+.exercise-card {
+  width: 300px;
+  border-radius: 10px;
+  border: 2px solid firebrick;
+  padding: 25px;
+}
+
+#create-workout-exercise-form {
+  display: none;
+}
+
+.delete-exercise {
+  position: relative;
+  top: 10px;
+  border-radius: 10px;
+}
+
+#submit-form {
+  border-radius: 10px;
 }
