fixes create action in exercises controller

--- a/fitness-frontend/style.css
+++ b/fitness-frontend/style.css
@@ -58,6 +58,11 @@ ul#workout {
   padding: 20px;
 }
 
+.name {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .exercise-card {
   width: 300px;
   border-radius: 10px;
